# typechat-link

./: .gitignore  Cargo.toml  README.md
src/: data.rs  main.rs  paint.rs  stats.rs
